<resources>
    <string name="app_name">Communnect</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="communnect">communnect</string>
    <string name="tagline">Connecting Communities, Serving You Better</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_account">sign in account</string>
    <string name="sign_in">Sign in</string>
    <string name="loginRedirect">Already have an account? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>