<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/colorgradient1"
    android:padding="20dp">

    <ImageView
        android:id="@+id/communect_logo"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginTop="180dp"
        android:padding="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/communnect_logo" />

    <TextView
        android:id="@+id/communect_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/communect_logo"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/communnect"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/communect_text"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_above="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F9FFFC"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#2C2C2C"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:backgroundTint="#F9FFFC"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#2C2C2C"
        android:textSize="18sp" />

</RelativeLayout>