<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/colorgradient1"
    android:padding="20dp">

    <ImageView
        android:id="@+id/communect_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/communnect_logo" />

    <TextView
        android:id="@+id/communect_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/communect_logo"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


    <!--      Firstname      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/firstnameTIL"
        android:layout_below="@+id/communect_text"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/firstnameTILET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--      Lastname      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/lastnameTIL"
        android:layout_below="@+id/firstnameTIL"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/lastnameTILET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--      Email Address      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL"
        android:layout_below="@+id/lastnameTIL"
        android:layout_marginBottom="10dp"
        >

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--      Password      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTIL"
        android:layout_marginBottom="30dp"
        >

        <EditText
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F9FFFC"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#2C2C2C"
        android:textSize="18sp"/>

</RelativeLayout>