<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/colorgradient1"
    android:padding="20dp">

    <ImageView
        android:id="@+id/communect_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/communnect_logo" />

    <TextView
        android:id="@+id/communect_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/communect_logo"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />



    <!--      Email Address      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL"
        android:layout_below="@+id/communect_text"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        >

        <EditText

            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--      Password      -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@+id/emailTIL"
        android:layout_marginBottom="30dp"
        >

        <EditText
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#F9FFFC"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/registerRedirectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:fontFamily="@font/montserrat"
        android:text="Don't have an account? Register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>